kubernetes_deployment/components/k8s-job-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /k8s-jobs/$2
    #
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#custom-timeouts
    #
    # default read timeout is 60s
    # https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_read_timeout
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    #
    #
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: k8s-job-manager
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - <my-host>
    secretName: <my-tls-secret-name>
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /k8s-jobs(/?)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8s-job-manager
            port:
              number: 80
